--- a/layouts/default.ejs
+++ b/layouts/default.ejs
@@ -9,25 +9,7 @@
     <title><%= site.title %></title>
   </head>
   <body>
-    <nav class="sidebar">
-      <div class="profile">
-        <!-- TODO: get profile picture path / link to insert here -->
-        <img src="https://via.placeholder.com/50" alt=""/>
-        <div class="description">
-          <p class="name"><%= profile.name %></p>
-          <p class="role"><%= profile.role %></p>
-        </div>
-      </div>
-
-      <ul class="items">
-        <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
-        <li class="item"><a href="#">About</a></li>
-        <li class="item"><a href="#">Resume</a></li>
-        <li class="item"><a href="#">Projects</a></li>
-        <li class="item"><a href="#">Blog</a></li>
-        <li class="item"><a href="#">CV</a></li>
-      </ul>
-    </nav>
+    <%- include(path.topbar); %>
     <main>
       <h1>Welcome to Hícaro's website</h1>
     </main>
