feat(page): new method for getting the config json

--- a/layouts/default.ejs
+++ b/layouts/default.ejs
@@ -10,6 +10,7 @@
   </head>
   <body>
     <%- include(path.topbar); %>
+    <!-- TODO: -->
     <main>
       <h1>Welcome to Hícaro's website</h1>
     </main>
