refactor(page): using loop for getting all CSS file paths

--- a/layouts/default.ejs
+++ b/layouts/default.ejs
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: get list of CSS and JS file path and insert here automatically with a loop -->
-    <link rel="stylesheet" href="../assets/css/globals.css" type="text/css" media="all">
-    <link rel="stylesheet" href="../assets/css/sidebar.css" type="text/css" media="all">
+
+    <% metaconfig.css.forEach(function(path){ -%>
+      <link rel="stylesheet" href=<%= path %> type="text/css" media="all">
+    <% }); -%>
+
     <title><%= site.title %></title>
   </head>
   <body>
-    <%- include(path.topbar); %>
-    <!-- TODO: -->
+    <%- include(metaconfig.partials.topbar); %>
+    <!-- TODO: add proper content here -->
     <main>
       <h1>Welcome to Hícaro's website</h1>
     </main>
