--- a/partials/topbar.ejs
+++ b/partials/topbar.ejs
@@ -1,8 +1,8 @@
 <nav class="topbar">
+  <!-- TODO: get profile picture path / link to insert here -->
   <div class="me">
-    <!-- TODO: get profile picture path / link to insert here -->
     <img src="https://via.placeholder.com/50" alt=""/>
-    <p class="name"><%= profile.name %></p>
+    <h1 class="name"><%= profile.name %></h1>
   </div>
 
   <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
@@ -12,6 +12,6 @@
     <li class="item"><a href="#">Blog</a></li>
     <li class="item"><a href="#">CV</a></li>
   </ul>
-
-  <hr>
 </nav>
+
+<hr>
