--- a/partials/topbar.ejs
+++ b/partials/topbar.ejs
@@ -1,4 +1,4 @@
-<nav class="topbar">
+<nav id="topbar">
   <!-- TODO: get profile picture path / link to insert here -->
   <div class="me">
     <img src="https://via.placeholder.com/50" alt=""/>
@@ -14,4 +14,4 @@
   </ul>
 </nav>
 
-<hr>
+<hr id="navbar-line">
