--- a/layouts/default.ejs
+++ b/layouts/default.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <% metaconfig.paths.css.forEach(function(path){ -%>
-      <link rel="stylesheet" href=<%= path %> type="text/css" media="all">
+      <link rel="stylesheet" href="<%= path %>" type="text/css" media="all" />
     <% }); -%>
 
     <title><%= site.title %></title>
