--- a/partials/topbar.ejs
+++ b/partials/topbar.ejs
@@ -1,8 +1,8 @@
 <nav id="topbar">
   <!-- TODO: get profile picture path / link to insert here -->
   <div class="me">
-    <img src="https://via.placeholder.com/50" alt=""/>
-    <h1 class="name"><%= profile.name %></h1>
+    <img src="https://via.placeholder.com/55" alt=""/>
+    <p class="name"><a href="#"><%= profile.name %></a></p>
   </div>
 
   <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
