--- a/partials/topbar.ejs
+++ b/partials/topbar.ejs
@@ -1,7 +1,7 @@
 <nav id="topbar">
   <!-- TODO: get profile picture path / link to insert here -->
   <div class="me">
-    <img src="https://via.placeholder.com/55" alt=""/>
+    <img src="<%= profile.picture %>" alt="profile-pic"/>
     <p class="name"><a href="#"><%= profile.name %></a></p>
   </div>
 
