feat(home): separating home content into its own ejs file

--- a/layouts/default.ejs
+++ b/layouts/default.ejs
@@ -12,9 +12,7 @@
   </head>
   <body>
     <%- include(metaconfig.paths.partials.topbar); %>
-    <!-- TODO: add proper content here -->
-    <main>
-      <h1>Welcome to Hícaro's website</h1>
-    </main>
+    <!-- TODO: This 'include' will change based on the page the user selected -->
+    <%- include(metaconfig.paths.partials.home) %>
   </body>
 </html>
