feat(project): building layout & architecture of the app (no actual content)

--- a/partials/projects.ejs
+++ b/partials/projects.ejs
@@ -1,3 +1,5 @@
+<%- include(metaconfig.paths.layouts.start); %>
 <main id="projects">
   <h1>Welcome to project section</h1>
 </main>
+<%- include(metaconfig.paths.layouts.end); %>
