--- a/layouts/topbar.ejs
+++ b/layouts/topbar.ejs
@@ -1,14 +1,12 @@
 <nav id="topbar">
   <div class="me">
     <img src="<%= profile.picture %>" alt="profile-pic" />
-    <p class="name"><a href="#"><%= profile.name %></a></p>
+    <p class="name"><a href="home.html"><%= profile.name %></a></p>
   </div>
 
   <ul class="items">
   <% metaconfig.topbar.forEach(function(topbarItem){ -%>
-    <% var item = topbarItem.item %>
-    <% var path = topbarItem.path %>
-    <li class="item"><a href=<%= path %>><%= item %></a></li>
+    <li class="item"><a href="<%= topbarItem.path %>"><%= topbarItem.item %></a></li>
   <% }); -%>
   </ul>
 </nav>
