--- a/layouts/topbar.ejs
+++ b/layouts/topbar.ejs
@@ -1,7 +1,7 @@
 <nav id="topbar">
   <div class="me">
     <img src="<%= profile.picture %>" alt="profile-pic" />
-    <p class="name"><a href="index.html"><%= profile.name %></a></p>
+    <p class="name"><a href="index"><%= profile.name %></a></p>
   </div>
 
   <ul class="items">
