--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -1,5 +1,9 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="home">
-  <h1>Welcome to Hícaro's website</h1>
+  <div class="intro">
+    <p>Hello, I'm</p>
+    <h1>Hícaro Dânrlley</h1>
+    <p>Software engineer</p>
+  </div>
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
