--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,4 +1,12 @@
-#home .intro p {
-  font-weight: normal;
-  font-size: 30;
+#home .intro {
+  p {
+    font-size: 20px;
+    margin: 5px auto;
+    color: #343434;
+  }
+
+  #name {
+    font-size: 40px;
+    color: #157fd7;
+  }
 }
