feat(home): adding id for my name

--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -2,7 +2,7 @@
 <main id="home">
   <div class="intro">
     <p>Hello, I'm</p>
-    <h1>Hícaro Dânrlley</h1>
+    <p id="name">Hícaro Dânrlley</h1>
     <p>Software engineer</p>
   </div>
 </main>
