fix(css): getting back to old style css
I don't want to have troubles with browser support because of CSS
nesting features, that's why I'm getting back to the old style

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,12 +1,11 @@
-#home .intro {
-  p {
-    font-size: 20px;
-    margin: 5px auto;
-    color: #343434;
-  }
+/* Intro */
+#home .intro p {
+  font-size: 20px;
+  margin: 5px auto;
+  color: #343434;
+}
 
-  #name {
-    font-size: 40px;
-    color: #157fd7;
-  }
+#home .intro #name {
+  font-size: 40px;
+  color: #157fd7;
 }
