--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -1,9 +1,15 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="home">
   <div class="intro">
-    <p>Hello, I'm</p>
-    <p id="name">Hícaro Dânrlley</h1>
-    <p>Software engineer</p>
+    <!-- TODO: from config --!>
+    <img src="https://placehold.in/350x500/dark" />
+    <div class="info">
+      <p>Hello, I'm</p>
+      <!-- TODO: from config --!>
+      <p id="name">Hícaro Dânrlley</h1>
+      <!-- TODO: from config --!>
+      <p>Software engineer</p>
+    </div>
   </div>
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
