feat(home): adding profile picture

--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -2,7 +2,7 @@
 <main id="home">
   <div class="intro">
     <!-- TODO: from config --!>
-    <img src="https://placehold.in/350x500/dark" />
+    <img class="personal-pic" src="./assets/images/me_2.jpeg" />
     <div class="info">
       <p>Hello, I'm</p>
       <!-- TODO: from config --!>
