--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,7 +2,6 @@
 #home .intro {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -10,6 +9,17 @@
   font-size: 20px;
   margin: 5px auto;
   color: #343434;
+}
+
+#home .intro .info {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+#home .intro .personal-pic {
+  border-radius: 5px;
+  width: 320px;
+  height: 450px;
 }
 
 #home #name {
