feat(home): getting home picture from `config.json`

--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -2,7 +2,7 @@
 <main id="home">
   <div class="intro">
     <!-- TODO: from config --!>
-    <img class="personal-pic" src="./assets/images/me_2.jpeg" />
+    <img class="personal-pic" src="<%= home.photo %>" />
     <div class="info">
       <p>Hello, I'm</p>
       <!-- TODO: from config --!>
