feat(home): name and role from `config.json`

--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -6,9 +6,9 @@
     <div class="info">
       <p>Hello, I'm</p>
       <!-- TODO: from config --!>
-      <p id="name">Hícaro Dânrlley</h1>
+      <p id="name"><%= profile.name %></h1>
       <!-- TODO: from config --!>
-      <p>Software engineer</p>
+      <p><%= profile.role %></p>
     </div>
   </div>
 </main>
