--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -7,6 +7,11 @@
       <p id="name"><%= profile.name %></h1>
       <p><%= profile.role %></p>
     </div>
+    <!-- TODO: maybe get a list of strings that represents my self description --!>
+  </div>
+
+  <div class="description">
+    <p>Software engineer</p>
   </div>
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
