feat(resume): adding initial content and style

--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -1,5 +1,34 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="resume">
-  <h1>Welcome to Hícaro's resume</h1>
+  <p>
+  I&#39;m a 🇧🇷 brazilian software engineer with more than 3 years of
+  experience and Computer Science student at Universidade Federal de Alagoas
+  (UFAL).
+  </p>
+
+  <p>
+  More especifically, I am a mobile and backend developer. I am
+  currently working at Otimize, a Brazilian startup that is pioneering the use
+  of technology to evaluate human movement kinematics.
+  </p>
+
+  <p>
+  I also love
+  compilers. My main personal project is a compiler for my own programming
+  language called &quot;idk&quot;. This compiler is being written in Rust with
+  hand-written lexical, syntactic, and semantic algorithms. Currently, I&#39;m
+  planning to use LLVM to build the backend in order to produce fast and
+  optimized code for several platforms. About the language&#39;s syntax, I got
+  inspiration from other languages, such as Python, Rust, Go, and Odin. Soon it
+  will be open-source so I can hopefully receive help from more experienced
+  compiler developers on the Internet.
+  </p>
+
+  <p>
+  During my spare time, I have made sporadic contributions to open-source
+  developer tools, such as telescope.nvim (fuzzy finder for the Neovim text
+  editor written in Lua) and quick-lint-js (a JavaScript linter written in
+  C++).
+  </p>
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
