--- a/assets/css/topbar.css
+++ b/assets/css/topbar.css
@@ -43,7 +43,7 @@
 }
 
 #topbar .me .name {
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-weight: 500;
 }
 
@@ -54,6 +54,7 @@
 /* List of items */
 #topbar .items {
   justify-content: end;
+  font-size: 18px;
   column-gap: 2rem;
 }
 
