--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap");
+
 body {
   width: 65%;
   margin: 0 auto;
