--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -1,5 +1,6 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="resume">
+  <p id="about-me" class="section"><a href="#about-me">#</a> About me</p>
   <p>
   I&#39;m a 🇧🇷 brazilian software engineer with more than 3 years of
   experience and Computer Science student at Universidade Federal de Alagoas
@@ -30,5 +31,31 @@
   editor written in Lua) and quick-lint-js (a JavaScript linter written in
   C++).
   </p>
+
+  <p id="skills" class="section"><a href="#skills">#</a> Skills</p>
+
+  <ul>
+    <li>
+    Experience as a back-end developer with Python, Go and other technologies,
+    and as a cross-platform mobile app developer with Flutter.
+    </li>
+    <br>
+    <li>
+    Skills in several programming languages, including Python, Typescript
+    (NodeJS), Java, Dart, Rust and Go. Thanks to my problem-solving skills, I
+    have great ease and flexibility in switching between programming languages
+    and frameworks according to the task's requirements.
+    </li> 
+    <br>
+    <li>
+    Fluent in conversational English and with advanced writing skills. I'm EC2
+    Proficient in the EF Standard English Test.
+    </li> 
+    <br>
+    <li>
+    Computer Science student at UFAL, with a strong interest in analysis and
+    performance of algorithms, compilers and software architecture.
+    </li>
+  </ul>
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
