--- a/public/assets/css/topbar.css
+++ b/public/assets/css/topbar.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap");
+
 /* blue - #157fd7 */
 /* grey - #d9d9d9 */
 
@@ -10,15 +12,6 @@
 #topbar .me img {
   width: 55px;
   height: 55px;
-}
-
-#topbar a {
-  color: #157fd7;
-  text-decoration: none;
-}
-
-#topbar a:hover {
-  text-decoration: underline;
 }
 
 #topbar,
@@ -37,7 +30,7 @@
 }
 
 #topbar .me .name {
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-weight: 500;
 }
 
@@ -48,6 +41,7 @@
 /* List of items */
 #topbar .items {
   justify-content: end;
+  font-size: 18px;
   column-gap: 2rem;
 }
 
