--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -45,12 +45,13 @@
     (NodeJS), Java, Dart, Rust and Go. Thanks to my problem-solving skills, I
     have great ease and flexibility in switching between programming languages
     and frameworks according to the task's requirements.
-    </li> 
+    </li>
     <br>
     <li>
-    Fluent in conversational English and with advanced writing skills. I'm EC2
-    Proficient in the EF Standard English Test.
-    </li> 
+    Fluent in conversational English and with advanced writing skills. <a class="link"
+    href="https://www.efset.org/cert/gpUeom" target="_blank">I'm EC2 Proficient in the EF
+    Standard English Test</a>.
+    </li>
     <br>
     <li>
     Computer Science student at UFAL, with a strong interest in analysis and
