feat(resume): adding links to project that I contribute

--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -27,9 +27,12 @@
 
   <p>
   During my spare time, I have made sporadic contributions to open-source
-  developer tools, such as telescope.nvim (fuzzy finder for the Neovim text
-  editor written in Lua) and quick-lint-js (a JavaScript linter written in
-  C++).
+  developer tools, such as <a
+  href="https://github.com/nvim-telescope/telescope.nvim"
+  class="link" target="_blank">telescope.nvim (fuzzy finder for the Neovim text editor written
+  in Lua)</a> and <a class="link"
+  href="https://github.com/quick-lint/quick-lint-js" target="_blank">quick-lint-js (a
+  JavaScript linter written in C++)</a>.
   </p>
 
   <p id="skills" class="section"><a href="#skills">#</a> Skills</p>
