feat(resume): adding new div for separating different parts of the resume

--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -18,11 +18,11 @@ body {
 }
 
 /* Generic section style */
-.section {
+.section-title {
   font-size: 30px !important;
   color: #157fd7;
 }
 
-.section a {
+.section-title a {
   color: #157fd7;
 }
