--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -13,15 +13,9 @@
     of technology to evaluate human movement kinematics.
     </p>
     <p>
-    I also love
-    compilers. My main personal project is a compiler for my own programming
-    language called &quot;idk&quot;. This compiler is being written in Rust with
-    hand-written lexical, syntactic, and semantic algorithms. Currently, I&#39;m
-    planning to use LLVM to build the backend in order to produce fast and
-    optimized code for several platforms. About the language&#39;s syntax, I got
-    inspiration from other languages, such as Python, Rust, Go, and Odin. Soon it
-    will be open-source so I can hopefully receive help from more experienced
-    compiler developers on the Internet.
+    I also love compilers. My main personal project is a compiler for my own
+    programming language called &quot;idk&quot;. This compiler is being written
+    in Rust with hand-written lexical, syntactic, and semantic algorithms. 
     </p>
     <p>
     During my spare time, I have made sporadic contributions to open-source
