fix(resume): italic to my language name

--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -14,7 +14,7 @@
     </p>
     <p>
     I also love compilers. My main personal project is a compiler for my own
-    programming language called &quot;idk&quot;. This compiler is being written
+    programming language called <i>idk</i>. This compiler is being written
     in Rust with hand-written lexical, syntactic, and semantic algorithms. 
     </p>
     <p>
