--- a/layouts/start.ejs
+++ b/layouts/start.ejs
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <% metaconfig.paths.css.forEach(function(path){ -%>
       <link rel="stylesheet" href="<%= path %>" type="text/css" media="all" />
     <% }); -%>
-
+    <link rel="shortcut icon" href="<%= site.favicon %>" type="image/x-icon">
     <title><%= site.title %></title>
   </head>
   <body>
