--- a/public/assets/css/topbar.css
+++ b/public/assets/css/topbar.css
@@ -53,6 +53,6 @@
 #navbar-line {
   height: 1px;
   border-width: 0;
-  color: gray;
-  background-color: #d9d9d9;
+	color: rgb(152, 143, 129);
+	background-color: rgb(45, 49, 51);
 }
