--- a/partials/projects.ejs
+++ b/partials/projects.ejs
@@ -1,5 +1,57 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="projects">
-  <h1>Welcome to project section</h1>
+  <div class="section">
+    <p id="projects" class="section-title"><a href="#projects">#</a> Projects I've built</p>
+    <p>These projects were built during my spare time and most of them are MIT
+    license. Use at your own risk.</p>
+
+    <ul class="list">
+      <li><a class="link" href="https://github.com/HicaroD/chip8.rs"
+      target="_blank">chip8.rs</a> is a CHIP8 interpreter written in Rust for
+      playing retro games, such as Snake and Space Invaders.</li>
+
+      <br>
+
+      <li><a class="link" href="https://github.com/HicaroD/filesystem.c"
+      target="_blank">filesystem.c</a> is a simple filesystem implementation
+      using <a class="link" target="_blank"
+      href="https://en.wikibooks.org/wiki/Operating_System_Design/File_Systems/Allocation#Linked_allocation">linked
+      allocation algorithm</a> written in C. Nothing too fancy, it was just for
+      learning purposes.</li>
+
+      <br>
+
+      <li><a class="link" href="use at your own risk "
+      target="_blank">game-of-life</a> is an implementation of <a class="link"
+      href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life"
+      target="_blank">"Conway's Game Of Life"</a> written in C++</li>
+
+      <br>
+
+      <li><a class="link" href="https://github.com/HicaroD/TodoScanner"
+      target="_blank">TodoScanner</a> is a command-line interface written in
+      Golang for converting your TODO comments in issues on your open-source
+      repositories.</li>
+
+      <br>
+
+      <li><a class="link" href="https://github.com/HicaroD/SocialApp"
+      target="_blank">SocialApp</a> is an API written in <a class="link"
+      href="https://fastapi.tiangolo.com/" target="_blank">FastAPI - a Python
+      web framework -</a> for simulating a social media. By using a <a
+      class="link" href="https://en.wikipedia.org/wiki/Graph_database"
+      target="_blank">graph-based database</a> called <a class="link"
+      href="https://en.wikipedia.org/wiki/Neo4j" target="_blank">Neo4J</a>, I
+      could simulate some social media features, such as following,
+      unfollowing, and comment on a post. Additionally, I've used <a
+      class="link" href="https://en.wikipedia.org/wiki/PostgreSQL"
+      target="_blank">PostgreSQL</a> for storing other informations, such
+      as comments to other user's posts.</li>
+
+      <br>
+
+    </ul>
+
+  </div>
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
