feat(projects): fixing Game of Life link and adding link to chip8

--- a/partials/projects.ejs
+++ b/partials/projects.ejs
@@ -7,8 +7,10 @@
 
     <ul class="list">
       <li><a class="link" href="https://github.com/HicaroD/chip8.rs"
-      target="_blank">chip8.rs</a> is a CHIP8 interpreter written in Rust for
-      playing retro games, such as Snake and Space Invaders.</li>
+      target="_blank">chip8.rs</a> is a <a class="link"
+      href="https://en.wikipedia.org/wiki/CHIP-8" target="_blank">CHIP8
+      interpreter</a> written in Rust for playing retro games, such as Snake
+      and Space Invaders.</li>
 
       <br>
 
@@ -21,7 +23,7 @@
 
       <br>
 
-      <li><a class="link" href="use at your own risk "
+      <li><a class="link" href="https://github.com/HicaroD/game-of-life"
       target="_blank">game-of-life</a> is an implementation of <a class="link"
       href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life"
       target="_blank">"Conway's Game Of Life"</a> written in C++</li>
