feat(blog): adding initial design of blog list

--- a/partials/blog.ejs
+++ b/partials/blog.ejs
@@ -1,5 +1,20 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="blog">
-  <h1>welcome to hícaro's blog</h1>
+  <div class="post">
+    <h1><a class= "link" href="#">First blog post</a></h1>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus
+    condimentum aliquet. Morbi lacus turpis, consectetur et gravida et, congue
+    sed quam. In et est massa. Nullam non tortor placerat, pellentesque enim
+    eu, cursus nisi. Vestibulum lacinia felis vitae finibus porta. Suspendisse
+    sit amet nulla vitae ipsum fermentum porta vel sed lorem.
+    </p>
+    <p class="date">23-12-2023</p>
+    <div class="tags">
+      <p><a class="link" href="#">#rust</a></p>
+      <p><a class="link" href="#">#web</a></p>
+    </div>
+  </div>
+  <hr class="line">
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
