--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -58,3 +58,10 @@ br {
    margin-top: 12px;
 }
 
+/* Divider line */
+.line {
+  height: 1px;
+  border-width: 0;
+  color: rgb(152, 143, 129);
+  background-color: rgb(45, 49, 51);
+}
