feat: adding initial structure of list of blog posts

--- a/partials/blog.ejs
+++ b/partials/blog.ejs
@@ -1,7 +1,7 @@
 <%- include(metaconfig.paths.layouts.start); %>
 <main id="blog">
   <div class="post">
-    <h1><a class= "link" href="#">First blog post</a></h1>
+    <h1 class="title"><a class= "link" href="#">First blog post</a></h1>
     <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus
     condimentum aliquet. Morbi lacus turpis, consectetur et gravida et, congue
