--- a/public/assets/css/globals.css
+++ b/public/assets/css/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap&family=Noto+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 
 /*
  * dark background: #131516
@@ -12,7 +12,7 @@ html {
 body {
   width: 65%;
   margin: 0 auto;
-  font-family: "IBM Plex Serif";
+  font-family: "IBM Plex Serif", sans-serif;
   color: #e8e6e3;
   word-spacing: 0.1em;
 }
@@ -58,3 +58,10 @@ br {
    margin-top: 12px;
 }
 
+/* Divider line */
+.line {
+  height: 1px;
+  border-width: 0;
+  color: rgb(152, 143, 129);
+  background-color: rgb(45, 49, 51);
+}
