--- a/partials/projects.ejs
+++ b/partials/projects.ejs
@@ -5,6 +5,7 @@
     <p>These projects were built during my spare time and most of them are MIT
     license. Use at your own risk.</p>
 
+    <!-- TODO: could I automate this?? -->
     <ul class="list">
       <li><a class="link" href="https://github.com/HicaroD/chip8.rs"
       target="_blank">chip8.rs</a> is a <a class="link"
