fix(projects): changing description of project section

--- a/partials/projects.ejs
+++ b/partials/projects.ejs
@@ -2,8 +2,8 @@
 <main id="projects">
   <div class="section">
     <p id="projects" class="section-title"><a href="#projects">#</a> Projects I've built</p>
-    <p>These projects were built during my spare time and most of them are MIT
-    license. Use at your own risk.</p>
+    <p>These projects were built during my spare time and most of them are
+    licensed under the MIT license. Use at your own risk.</p>
 
     <!-- TODO: could I automate this?? -->
     <ul class="list">
