feat(blog): adding blocks for notes, warnings and tips

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -2,3 +2,20 @@
   font-family: "IBM Plex Serif";
   font-weight: 500;
 }
+
+/* Generic block (notes, quotes, code blocks and etctera) */
+#post .block {
+  padding-left: 15px;
+}
+
+#post .block p:nth-child(1) {
+  margin-bottom: 5px;
+}
+
+#post .block p:nth-child(2) {
+  margin-top: 0px;
+}
+
+/* #post .note {
+  border-left: solid 4px #539bf5;
+} */
