fix(resume): changing my resume description

--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -10,9 +10,9 @@
       (UFAL).
     </p>
     <p>
-      More especifically, I am a mobile and backend developer. I am currently
-      working at Otimize, a Brazilian startup that is pioneering the use of
-      technology to evaluate human movement kinematics.
+      More especifically, I am a mobile and backend developer. Previously, I've
+      worked at Otimize, a Brazilian startup that is pioneering the use
+      of technology to evaluate human movement kinematics.
     </p>
     <p>
       I also love compilers. My main personal project is a compiler for my own
