fix(resume): changing the name of my programming language

--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -11,13 +11,13 @@
     </p>
     <p>
       More especifically, I am a mobile and backend developer. Previously, I've
-      worked at Otimize, a Brazilian startup that is pioneering the use
-      of technology to evaluate human movement kinematics.
+      worked at Otimize, a Brazilian startup that is pioneering the use of
+      technology to evaluate human movement kinematics.
     </p>
     <p>
       I also love compilers. My main personal project is a compiler for my own
-      programming language called <i>idk</i>. This compiler is being written in
-      the
+      programming language called <i>Telia</i>. This compiler is being written
+      in the
       <a class="link" href="https://www.rust-lang.org/" target="_blank"
         >Rust programming language</a
       >
