fix(architecture): changing parts of the architecture related to the config

--- a/layouts/topbar.ejs
+++ b/layouts/topbar.ejs
@@ -1,24 +1,24 @@
 <nav id="topbar">
   <div class="me">
     <img src="<%= profile.picture %>" alt="profile-pic" />
-    <p class="name"><a class="link" href="<%= metaconfig.home_path %>"><%= profile.name %></a></p>
+    <p class="name">
+      <a class="link" href="/"><%= profile.name %></a>
+    </p>
   </div>
 
   <ul class="items">
-  <% if (metaconfig.prod) { %>
-    <% metaconfig.topbar.forEach(function(topbarItem){ -%>
-      <% if (topbarItem.prod) { %>
-        <li class="item"><a class="link" href="<%= topbarItem.path %>"><%= topbarItem.item %></a></li>
-      <% } %>
-    <% }); -%>
-  <% } %>
-
-  <% if (!metaconfig.prod) { %>
-    <% metaconfig.topbar.forEach(function(topbarItem){ -%>
-      <li class="item"><a class="link" href="<%= topbarItem.path %>"><%= topbarItem.item %></a></li>
-    <% }); -%>
-  <% } %>
-
+    <% if (metaconfig.prod) { %> <%
+    metaconfig.topbar.forEach(function(topbarItem){ -%> <% if (topbarItem.prod)
+    { %>
+    <li class="item">
+      <a class="link" href="<%= topbarItem.path %>"><%= topbarItem.item %></a>
+    </li>
+    <% } %> <% }); -%> <% } %> <% if (!metaconfig.prod) { %> <%
+    metaconfig.topbar.forEach(function(topbarItem){ -%>
+    <li class="item">
+      <a class="link" href="<%= topbarItem.path %>"><%= topbarItem.item %></a>
+    </li>
+    <% }); -%> <% } %>
   </ul>
 </nav>
 
