--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -2,7 +2,7 @@
 <main id="home">
   <div class="intro">
     <div class="info">
-      <p id="name"><%= profile.name %></h1>
+      <p id="name"><%= profile.name %></p>
       <p id="description">Software engineer. Brazilian. Passionate by compilers and Counter-Strike.</p>
     </div>
     <img class="personal-pic" src="<%= home.photo %>" />
