feat(index): changing a little bit of my self description in the home page

--- a/partials/index.ejs
+++ b/partials/index.ejs
@@ -3,7 +3,7 @@
   <div class="intro">
     <div class="info">
       <p id="name"><%= profile.name %></p>
-      <p id="description">Software engineer. Brazilian. Passionate by compilers and Counter-Strike.</p>
+      <p id="description">Software engineer. Brazilian. Passionate by compilers, Counter-Strike and competition.</p>
     </div>
     <img class="personal-pic" src="<%= home.photo %>" />
   </div>
