feat(codeblocks): adding code block support with `highlight.js`

--- a/layouts/start.ejs
+++ b/layouts/start.ejs
@@ -11,6 +11,12 @@
     <% metaconfig.paths.js.forEach(function(path){ -%>
       <script src="<%= path %>" defer></script>
     <% }); -%>
+
+    <!-- https://highlightjs.org/ for syntax highlighting -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.css">
+    <script>hljs.highlightAll()</script>
   </head>
   <body>
     <%- include(metaconfig.paths.layouts.topbar); %>
