--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -71,5 +71,55 @@
       </li>
     </ul>
   </div>
+
+  <div class="section">
+    <p id="education" class="section-title"><a href="#education">#</a> Education</p>
+    <div class="education-item">
+      <div class="education-location">
+        <p>Federal University of Alagoas</p>
+        <p>Arapiraca - Alagoas, Brazil</p>
+      </div>
+      <div class="education-stage">
+        <p class="education-degree">Bachelor's degree in Computer Science</p>
+        <p class="education-start-end">2021 - Present</p>
+      </div>
+      <div class="education-achievements">
+        <ul class="list">
+          <li>
+            I taught an introductory course to the Python programming language.
+            This course was completely free and was a comprehensive exploration
+            of the important aspects of Python aimed at Computer Science
+            students. The course is structured to cover language fundamentals,
+            including variables, data structures, functions, and
+            object-oriented programming.
+          </li>
+          <br />
+          <li>
+            I taught an advanced course on Web Scraping with BeautifulSoup
+            together with college friends. We were able to teach various
+            techniques for extracting and manipulating data from any web,
+            allowing students to collect and analyze web data efficiently.
+          </li>
+          <br />
+          <li>
+            I taught an introductory course on building RESTful APIs with
+            FastAPI together with college friends. Students were introduced to
+            the process of creating, managing, and optimizing robust and
+            efficient APIs. The course covers everything from the basics of API
+            development to more advanced techniques, equipping students with
+            the skills needed to build high-performance APIs.
+          </li>
+          <br />
+          <li>
+            I volunteered in organizing the Aracomp 2023 event in the "Marketing
+            and Communication" team. Aracomp is an annual computing event that
+            takes place at the Federal University of Alagoas, which brings
+            together speakers, students and professionals in the technology field
+            in general.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </main>
 <%- include(metaconfig.paths.layouts.end); %>
