--- a/partials/resume.ejs
+++ b/partials/resume.ejs
@@ -73,6 +73,57 @@
   </div>
 
   <div class="section">
+    <p id="work" class="section-title"><a href="#work">#</a> Work</p>
+    <div class="work-item">
+      <div class="work-location">
+        <p>Otimize Tech</p>
+        <p>Arapiraca - Alagoas, Brazil</p>
+      </div>
+      <div class="work-stage">
+        <p class="work-degree">Back-end and mobile software engineer</p>
+        <p class="work-start-end">2021 - 2024</p>
+      </div>
+      <div class="work-achievements">
+        <ul class="list">
+          <li>
+            Developed RESTful APIs with Python and FastAPI for filtering sensory
+            data using advanced filtering methods, such as Kalman filter.
+          </li>
+          <br />
+          <li>
+            <b>Improved runtime performance by 71%</b> using a library called Ray to
+            process sensor data from each part of the human body in parallel.
+            Additionally, I used Numpy methods and arrays instead of lists from
+            native Python for obtaining optimized results.
+          </li>
+          <br />
+          <li>
+            <b>Reduced peak memory consumption by 52%</b> with an algorithm to read
+            chunks (sublists) of large lists of sensor data. The general idea is
+            to calculate the index range of each chunk of the list and place it
+            in a range list instead of separating the entire list and overloading
+            memory with new lists.
+          </li>
+          <br />
+          <li>
+            Implemented reverse proxies with NGINX, using SSL certificates to
+            enable the server to use HTTPS, in order to deploy the analytics API
+            of the company. This ensured the security of communication between
+            the client and server, protecting user data during the communication.
+          </li>
+          <li>
+            Built a deployment automation system with Bash scripts using GitHub
+            Actions alongside with SSH in order to do remote connections to the
+            server. This made the deployment process easier, given that the
+            deployment process is done automatically as soon as new changes are
+            sent to the main branch.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="section">
     <p id="education" class="section-title"><a href="#education">#</a> Education</p>
     <div class="education-item">
       <div class="education-location">
