--- a/public/assets/css/resume.css
+++ b/public/assets/css/resume.css
@@ -1,14 +1,19 @@
 .education-location,
-.education-stage {
+.education-stage,
+.work-location,
+.work-stage {
   display: flex;
   justify-content: space-between;
 }
 
-.education-location {
+.education-location,
+.work-location {
   font-weight: bold;
 }
 
 .education-location > p,
-.education-stage > p {
+.work-location > p,
+.education-stage > p,
+.work-stage > p {
   margin: 0;
 }
